--- a/WP7Klient/About.xaml
+++ b/WP7Klient/About.xaml
@@ -40,49 +40,14 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel x:Name="TitlePanel"
-                    Grid.Row="0"
-                    Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle"
-                       Text="WP7KLIENT"
-                       Style="{StaticResource PhoneTextNormalStyle}" />
-            <TextBlock x:Name="PageTitle"
-                       Text="lisateave"
-                       Margin="9,-7,0,0"
-                       Style="{StaticResource PhoneTextTitle1Style}" />
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock x:Name="ApplicationTitle" Text="WP7KLIENT" Style="{StaticResource PhoneTextNormalStyle}" />
+            <TextBlock x:Name="PageTitle" Text="lisateave" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" />
         </StackPanel>
-        <Grid x:Name="ContentPanel"
-              Grid.Row="1"
-              Margin="12,0,12,0">
-            <TextBlock Height="180"
-                       HorizontalAlignment="Left"
-                       Margin="12,22,0,0"
-                       Name="aboutText"
-                       Text=""
-                       VerticalAlignment="Top"
-                       Width="438"
-                       TextWrapping="Wrap"
-                       TextAlignment="Left"
-                       FontSize="22" />
-            <Button Content="Saada soovitus või ettepanek"
-                    Height="82"
-                    HorizontalAlignment="Left"
-                    Margin="9,292,0,0"
-                    Name="button1"
-                    VerticalAlignment="Top"
-                    Width="441"
-                Background="{StaticResource PhoneAccentBrush}" BorderBrush="{x:Null}"
-                    Click="Suggestion_Click"/>
-            <Button Content="www.joel.ee"
-                    Height="82"
-                    HorizontalAlignment="Left"
-                    Margin="12,370,0,0"
-                    Name="button2"
-                    VerticalAlignment="Top"
-                    Width="441"
-                    FontSize="20"
-                Background="{StaticResource PhoneAccentBrush}" BorderBrush="{x:Null}"
-                    Click="Author_Click"/>
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <TextBlock Height="196" HorizontalAlignment="Left" Margin="12,6,0,0" Name="aboutText" Text="" VerticalAlignment="Top" Width="438" TextWrapping="Wrap" TextAlignment="Left" FontSize="22" />
+            <Button Content="Saada soovitus või ettepanek" Height="82" HorizontalAlignment="Left" Margin="9,292,0,0" Name="button1" VerticalAlignment="Top" Width="441" Background="{StaticResource PhoneAccentBrush}" BorderBrush="{x:Null}" Click="Suggestion_Click"/> 
+            <Button Content="www.joel.ee" Height="82" HorizontalAlignment="Left" Margin="12,370,0,0" Name="button2" VerticalAlignment="Top" Width="441" FontSize="20" Background="{StaticResource PhoneAccentBrush}" BorderBrush="{x:Null}" Click="Author_Click"/>
         </Grid>
     </Grid>
 
