--- a/WP7Klient/Login.xaml
+++ b/WP7Klient/Login.xaml
@@ -12,9 +12,7 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="PortraitOrLandscape"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
-    <!--We preloaded the toolkit in the first page just to speed up the application later on-->
-
-    <!--LayoutRoot is the root grid where all page content is placed-->
+    
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="LoadingStates">
@@ -48,7 +46,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <!--TitlePanel contains the name of the application and page title-->
+        <!--TitlePanel-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock x:Name="ApplicationTitle" Text="WP7KLIENT" Style="{StaticResource PhoneTextNormalStyle}"/>
             <TextBlock x:Name="PageTitle" Text="sisselogimine" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
@@ -57,9 +55,7 @@
         <StackPanel x:Name="ContentPanel" Grid.Row="1" Margin="0,0,0,0">
             <phone:WebBrowser HorizontalAlignment="Stretch" Margin="0,0,0,0" Name="BrowserControl" VerticalAlignment="Stretch" Height="606" Width="Auto" IsScriptEnabled="True" />
         </StackPanel>
-        <Grid x:Name="GD_Progress"
-         Background="{StaticResource PhoneBackgroundBrush}"
-         Visibility="Collapsed" RenderTransformOrigin="0.5,0.5">
+        <Grid x:Name="GD_Progress" Background="{StaticResource PhoneBackgroundBrush}" Visibility="Collapsed" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <CompositeTransform/>
             </Grid.RenderTransform>
@@ -67,17 +63,5 @@
             <TextBlock TextWrapping="Wrap" Text="Laadimine... " VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,-34,0,0" />
         </Grid>
     </Grid>
- 
-    <!--Sample code showing usage of ApplicationBar-->
-    <!--<phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar_button1.png" Text="Button 1"/>
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar_button2.png" Text="Button 2"/>
-            <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarMenuItem Text="MenuItem 1"/>
-                <shell:ApplicationBarMenuItem Text="MenuItem 2"/>
-            </shell:ApplicationBar.MenuItems>
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>-->
 
 </phone:PhoneApplicationPage>
