--- a/WP7Klient/Main.xaml
+++ b/WP7Klient/Main.xaml
@@ -34,15 +34,13 @@
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
-    <!-- LayoutRoot contains the root grid where all other page content is placed-->
-    <!-- LayoutRoot contains the root grid where all other page content is placed-->
-    <Grid x:Name="LayoutRoot"  Background="Transparent">
 
+    <Grid x:Name="LayoutRoot"  Background="Transparent">
         <controls:Pivot Title="WP7KLIENT">
             <!--Pivot item one-->
             <controls:PivotItem Header="postitused">
                 <Grid>
-                    <ListBox Height="573" HorizontalAlignment="Left" x:Name="tweetsList" VerticalAlignment="Top" Width="456" SelectionChanged="tweetsList_SelectionChanged">
+                    <ListBox Height="573" HorizontalAlignment="Left" x:Name="tweetsList" VerticalAlignment="Top" Width="456" SelectionChanged="list_SelectionChanged">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal" Margin="0,25,0,0">
@@ -80,7 +78,7 @@
                     <toolkit:PhoneTextBox x:Name="Search" Hint="Otsitav sõne" Margin="0,-20,106,476" KeyUp="Search_KeyUp" Width="347" Height="76" />
                     <Button Content="otsi" Height="82" HorizontalAlignment="Left" Margin="329,0,0,0" x:Name="searchSubmit" VerticalAlignment="Top" Width="123" Click="Search_Click" Background="{StaticResource PhoneAccentBrush}" BorderBrush="{x:Null}" />
                     <Grid Height="511" Width="456" Margin="0,60,1,-36">
-                        <ListBox Height="492" HorizontalAlignment="Left" x:Name="searchList" VerticalAlignment="Top" Width="455" SelectionChanged="searchList_SelectionChanged">
+                        <ListBox Height="492" HorizontalAlignment="Left" x:Name="searchList" VerticalAlignment="Top" Width="455" SelectionChanged="list_SelectionChanged">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal" Margin="0,25,0,0">
@@ -106,6 +104,7 @@
         </controls:Pivot>
     </Grid>
 
+    <!--ApplicationBar-->
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Minimized">
             <shell:ApplicationBar.MenuItems>
